--- a/style.css
+++ b/style.css
@@ -86,3 +86,28 @@
 .h-bottom {
     padding: 22.5px 0;
 }
+/*fine zona header-nav*/
+
+.jumbotron {
+    background-image: url(img/jumbotron.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 700px;
+}
+
+.box {
+    width: 50%;
+    padding-top: 50px;
+}
+
+.box > p {
+    padding: 35px 0;
+    line-height: 25px;
+    font-size: 12px; 
+}
+
+.big {
+    margin-left: 0;
+    padding: 20px 40px;
+}
