--- a/style.css
+++ b/style.css
@@ -356,6 +356,99 @@
     margin: 20px 0 0 175px;
 }
 /*inizio footer*/
+.bg-deepblue {
+    background-color: #32495B;
+}
+
+.ft-row {
+    width: 100%;
+}
+
+.links-list {
+    float: left;
+    width: 25%;
+    padding: 30px 0;
+}
+
+.links-list > h4 {
+    color: #FFFFFF;
+}
+
+.links-list > ul {
+    list-style: none;
+    padding-top: 20px;
+}
+
+.links-list > ul > li {
+    line-height: 30px;
+}
+
+.links-list > ul > li > a {
+    text-decoration: none;
+    color: #CBD6E2;
+    font-size: 14px;
+}
+
+.btn-lg {
+    float: right;
+    width: 25%;
+    padding-top: 10px;
+}
+
+.grey {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+.social {
+    padding: 15px 0;
+}
+
+.social > a, .languages > a {
+    text-decoration: none;
+    color: #CBD6E2;
+    padding-right: 20px;
+}
+
+.ft-row.third {
+    border-bottom: 1px solid #FFFFFF;
+}
+
+.languages {
+    width: 50%;
+    margin: auto;
+    padding: 35px 0 15px 0px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.copyright-left {
+    float: left;
+    width: 50%;
+    padding: 30px 0;
+}
+
+.copyright-left > p {
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.copyright-right {
+    float: right;
+    width: 50%;
+    padding: 30px 0 0 250px;
+}
+
+.copyright-right > a {
+    text-decoration: none;
+    color: #CBD6E2;
+    padding-left: 20px;
+    font-size: 14px;
+}
+
 
 
 
