--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@
     background-color: #F4F9FD;
 }
 
-.bg-main {
-    background-color: #F4F9FD;
-}
-
 .bg-blue {
     background-color: #00BAA8;
 }
@@ -102,10 +98,11 @@
 
 .jumbotron {
     background-image: url(img/jumbotron.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 695px;
+    padding: 30px 0 180px 0;
+    background-position: right;
 }
 
 .box {
@@ -128,6 +125,7 @@
 .box-cube {
     width: 200px;
     margin: auto;
+    padding-top: 50px;
 }
 .cube {
     width: 100%;
