--- a/style.css
+++ b/style.css
@@ -120,12 +120,20 @@
     margin-left: 0;
     padding: 20px 40px;
 }
+/*zona bordo azzurro sotto jumbotron*/
+.banda-azzurra {
+    background-color: #AFEBE4;
+    padding: 25px 0;
+    border-top: 3px solid  #33475B;
+    border-bottom: 3px solid  #33475B;
+    margin-top: -55px;
+}
 /*inizio sezione main*/
 
 .box-cube {
     width: 200px;
     margin: auto;
-    padding-top: 50px;
+    padding: 30px 0 15px 0;
 }
 .cube {
     width: 100%;
@@ -145,8 +153,8 @@
 .horizontal-card {
     width: 100%;
     background-color: #FFFFFF;
-    border-radius: 5px;
-    box-shadow: 0 0 3px #E6ECF1;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #E6ECF1;
 }
 
 .top-row {
@@ -202,14 +210,15 @@
 
 .vertical-card {
     width: 100%;
-    padding: 25px 0;
+    padding: 25px 0 40px 0;
 }
 
 .column {
     float: left;
     width: calc(860px/3);
     background-color: #FFFFFF;
-    box-shadow: 0 0 3px #E6ECF1;
+    box-shadow: 0 0 15px #E6ECF1;
+    border-radius: 10px;
 }
 
 .column.middle {
